Redesign index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,351 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="shortcut icon" href="favicon.png"/>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>	
+<title>
+Doruk Korkmaz - Software Engineer
+</title>
+
+</head>
+<style>
+
+@import url('https://fonts.googleapis.com/css?family=Muli');
+
+html, body, section, div {
+}
+
+body { 
+  font-family: 'Muli', sans-serif;
+  color: black;
+  background-color: white;
+  font-size: 18px;
+  line-height: 1.8;
+  letter-spacing: 0.0125em;
+  text-align: left;
+  padding-top: 2.5rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
+  padding-bottom: 2.5rem;
+}
+
+hr {
+    border: 0;
+    height: 1px;
+    background: black;
+}
+
+.container {
+  display: table;
+  width: 100%;
+  height: auto;
+}
+
+div {
+  display: table-cell;
+  text-align: left;
+  width: 50%;
+  padding-top: 1rem;;
+  padding-bottom: 1rem;
+}
+
+btn {
+  display: table;
+  padding-top: 1rem;;
+  padding-bottom: 1rem;
+}
+
+sup { 
+    vertical-align: super;
+    font-size: 0.7em;
+    padding-left: 0.1em;
+}
+
+a img {
+width: 0px;
+height: auto;
+border-width: 2px;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+    border-bottom: 1px dotted gray;
+    transition: color 0.1s linear;
+    -webkit-transition: color 0.1s linear;
+    -moz-transition: color 0.1s linear;
+}
+
+a:visited {
+    color: black;
+}
+
+a:hover {
+    color: #F3B69A;
+    border-bottom-color: #F3B69A;
+}
+
+a:active {
+    color: black;
+}
+
+ul {
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0;
+}
+
+li {
+  padding-left: 1.5em;
+  text-indent: -1.5em;
+}
+
+li:before {
+  content: "→";
+  padding-right: 8px;
+  vertical-align: 0%;
+  margin-left: -27px;
+}
+
+fav {
+  vertical-align: -1%;
+}
+
+fav2 {
+  vertical-align: 0%;
+}
+
+@media only screen and (max-width: 800px) {
+    
+body { 
+  font-size: 16px;
+  line-height: 2;
+  letter-spacing: 0.0125em;
+  text-align: left;
+  padding-top: 0rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-bottom: 1rem;
+}
+
+hr {
+    border: 0;
+    height: 1px;
+    background: black;
+}
+
+.container {
+  display: table;
+  width: 100%;
+  height: auto;
+}
+
+div {
+  display: block;
+  text-align: left;
+  width: 100%;
+  padding-top: 0.2rem;;
+  padding-bottom: 0.2rem;
+}
+
+btn {
+  display: table;
+  padding-top: 1.3rem;
+}
+
+ul {
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0;
+}
+
+li {
+  padding-left: 1.5em;
+  text-indent: -1.5em;
+}
+
+li:before {
+  content: "➡️";
+  size: 1rem;
+  padding-right: 6px;
+  vertical-align: 0%;
+  margin-left: 0px;
+}
+
+sup { 
+    vertical-align: super;
+    font-size: 0.7em;
+    padding-left: 0.1em;
+}
+
+.left-half {
+  font-weight: 600;
+  line-height: 1.5;
+  padding-top: 1.3rem;
+}
+
+.right-half {
+  padding-bottom: 1.3rem;
+}
+
+
+</style>
+</head>
 <body>
-<h1>Doruk Korkmaz</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<section class="container">
+  <div class="left-half">
+    <article>
+      <p>Doruk Korkmaz</p>
+    </article>
+  </div>
+  <div class="right-half">
+    <article>
+      <p>
+      <a href=mailto:doruk.korkmaz@gmail.com target="_blank">doruk.korkmaz [at] gmail.com</a>
+      <br>
+      <a href="https://www.linkedin.com/in/dorukkorkmaz" target="_blank">linkedin.com/dorukkorkmaz</a>
+      <br>
+      <a href="https://github.com/DorukKorkmaz" target="_blank">github.com/dorukkorkmaz</a>
+      </p>
+    </article>
+  </div>
+</section>
+<hr>
+<section class="container">
+  <div class="left-half">
+    <article>
+      <p>About</p>
+    </article>
+  </div>
+  <div class="right-half">
+    <article>
+
+      <p>I am a software engineer who is passionate about creating efficient solutions that make people’s lives easier via my technical experience.
+      <br>
+      <br>
+      Currently, I am studying for an M.S. degree in Computer Science at University of Southern California. I am also working at <a href="https://imsc.usc.edu" target="_blank">USC Integrated Media Systems Center</a>.
+      <br>
+      <br>
+      I cofounded TripTrop, a mobile application which creates personalized and optimized travel routes. 
+      I also had summer internships at Microsoft and Oracle, where I worked on mobile application development. 
+      Moreover, I was a Research Assistant at University of California, Irvine and published a paper in ACM conference. 
+      <br>
+      <br>
+      I love traveling, reading self-help books and playing tennis.
+      </p>
+    </article>
+  </div>
+</section>
+<hr>
+<section class="container">
+  <div class="left-half">
+    <article>
+      <p>Education</p>
+    </article>
+  </div>
+  <div class="right-half">
+    <article>
+      <p><a href="https://www.behance.net/gallery/71393197/ZOJO-identity-packaging-website-beauty-supplements" target="_blank">University of Southern California</a>
+      <br>
+      <em>2018-2019</em>
+      <br>
+      MS in Computer Science
+      <br>
+      <br>
+      <a href="https://www.behance.net/gallery/64483113/SmartYou-brand-identity-website-for-marketing-agency" target="_blank">Koc University</a>
+      <br>
+      <em>2014-2018</em>
+      <br>
+      BS in Computer Engineering.
+      <br>
+      <br>
+      <a href="https://www.behance.net/gallery/63200767/Productz-search-compare-thousands-of-products" target="_blank">University of California, Irvine</a>
+      <br>
+      <em>2017</em>
+      <br>
+      Study Abroad, Computer Science and Engineering.
+      <br>
+      <br>
+      <a href="https://www.behance.net/gallery/60871829/Codee-friendly-web-development" target="_blank">Nanyang Technological University</a>
+      <br>
+      <em>2016</em>
+      <br>
+      Summer Study Abroad, Entrepreneurship & Innovation Track.
+      </p>
+    </article>
+  </div>
+</section>
+
+
+<hr>
+<section class="container">
+  <div class="left-half">
+    <article>
+      <p>Work experience</p>
+    </article>
+  </div>
+  <div class="right-half">
+    <article>
+      <p>
+      <a href="http://www.holysheep.co/en" target="_blank">USC Integrated Media Systems Center</a>
+      <br>
+      <em>08.2018 — present</em>
+      <br>
+      Software Engineer
+      <br>
+      <br>
+      <a href="https://www.behance.net/SkyGate" target="_blank">TripTrop</a>
+      <br>
+      <em>09.2017 — 06.2018</em>
+      <br>
+      Co-Founder
+      <br>
+      <br>
+      <a href="http://www.bevy.agency/category/projekty/" target="_blank">Microsoft</a>
+      <br>
+      <em>07.2017 — 08.2017</em>
+      <br>
+      Software Engineer Intern</a>
+      <br>
+      <br>
+      <a href="http://theultralinx.com/author/jaroslaw" target="_blank">UCI Center for Algorithms</a>
+      <br>
+      <em>02.2017 — 06.2017</em>
+      <br>
+      Research Assistant</a>
+      <br>
+      <br>
+      <a href="https://www.tabletowo.pl/author/jarek/" target="_blank">Oracle</a>
+      <br>
+      <em>07.2016 — 08.2016</em>
+      <br>
+      Software Engineering Intern</a>
+      </p>
+    </article>
+  </div>
+</section>
+
+<!-- <hr>
+<section class="container">
+  <div class="left-half">
+    <article>
+      <p>Notable Projects</p>
+    </article>
+  </div>
+  <div class="right-half">
+    <article>
+    </article>
+  </div>
+</section> -->
+
+<!--  <hr>
+<section class="container">
+  <div class="left-half">
+    <article>
+      <p><fav2>&#8595</fav2>&nbsp;<a href="https://www.dropbox.com/s/nx869io5e5jsc8u/Jaroslaw_Morawski_CV.pdf?dl=1" target="_blank" style="border-bottom: 0">Download as PDF</a></p>
+    </article>
+  </div>
+</section> -->
 </body>
 </html>
