--- a/index.html
+++ b/index.html
@@ -246,28 +246,28 @@ sup {
   </div>
   <div class="right-half">
     <article>
-      <p><a href="https://www.behance.net/gallery/71393197/ZOJO-identity-packaging-website-beauty-supplements" target="_blank">University of Southern California</a>
+      <p><a href="https://www.usc.edu/" target="_blank">University of Southern California</a>
       <br>
       <em>2018-2019</em>
       <br>
       MS in Computer Science
       <br>
       <br>
-      <a href="https://www.behance.net/gallery/64483113/SmartYou-brand-identity-website-for-marketing-agency" target="_blank">Koc University</a>
+      <a href="https://www.ku.edu.tr/en" target="_blank">Koc University</a>
       <br>
       <em>2014-2018</em>
       <br>
       BS in Computer Engineering.
       <br>
       <br>
-      <a href="https://www.behance.net/gallery/63200767/Productz-search-compare-thousands-of-products" target="_blank">University of California, Irvine</a>
+      <a href="https://uci.edu/" target="_blank">University of California, Irvine</a>
       <br>
       <em>2017</em>
       <br>
       Study Abroad, Computer Science and Engineering.
       <br>
       <br>
-      <a href="https://www.behance.net/gallery/60871829/Codee-friendly-web-development" target="_blank">Nanyang Technological University</a>
+      <a href="https://www.ntu.edu.sg" target="_blank">Nanyang Technological University</a>
       <br>
       <em>2016</em>
       <br>
@@ -288,35 +288,35 @@ sup {
   <div class="right-half">
     <article>
       <p>
-      <a href="http://www.holysheep.co/en" target="_blank">USC Integrated Media Systems Center</a>
+      <a href="https://imsc.usc.edu/" target="_blank">USC Integrated Media Systems Center</a>
       <br>
       <em>08.2018 — present</em>
       <br>
       Software Engineer
       <br>
       <br>
-      <a href="https://www.behance.net/SkyGate" target="_blank">TripTrop</a>
+      <a href="http://triptropapp.com" target="_blank">TripTrop</a>
       <br>
       <em>09.2017 — 06.2018</em>
       <br>
       Co-Founder
       <br>
       <br>
-      <a href="http://www.bevy.agency/category/projekty/" target="_blank">Microsoft</a>
+      <a href="https://www.microsoft.com" target="_blank">Microsoft</a>
       <br>
       <em>07.2017 — 08.2017</em>
       <br>
       Software Engineer Intern</a>
       <br>
       <br>
-      <a href="http://theultralinx.com/author/jaroslaw" target="_blank">UCI Center for Algorithms</a>
+      <a href="https://www.ics.uci.edu/~theory/" target="_blank">UCI Center for Algorithms</a>
       <br>
       <em>02.2017 — 06.2017</em>
       <br>
       Research Assistant</a>
       <br>
       <br>
-      <a href="https://www.tabletowo.pl/author/jarek/" target="_blank">Oracle</a>
+      <a href="https://www.oracle.com" target="_blank">Oracle</a>
       <br>
       <em>07.2016 — 08.2016</em>
       <br>
