--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>	
 <title>
-Doruk Korkmaz - Software Engineer
+Doruk Korkmaz
 </title>
 
 </head>
@@ -106,6 +106,10 @@ li:before {
   padding-right: 8px;
   vertical-align: 0%;
   margin-left: -27px;
+}
+
+.left-half {
+  font-weight: 900;
 }
 
 fav {
@@ -282,7 +286,7 @@ sup {
 <section class="container">
   <div class="left-half">
     <article>
-      <p>Work experience</p>
+      <p>Work Experience</p>
     </article>
   </div>
   <div class="right-half">
