--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ sup {
       <br>
       <em>08.2018 — present</em>
       <br>
-      Software Engineer
+      Research Assistant
       <br>
       <br>
       <a href="http://triptropapp.com" target="_blank">TripTrop</a>
